--- a/index.html
+++ b/index.html
@@ -212,8 +212,10 @@
             <p>Аудиофайл загружается с: 185.43.6.38</p>
         </div>
         
-        <audio id="audio-player" src="http://185.43.6.38/hc/preview/temp_067TG/2025.09/Gianluca%20Dimeo%20%26%20Daniel%20Santoro%20-%20Wings.mp3"></audio>
-        <audio id="audio-player" src="https://185.43.6.38/hc/preview/temp_067TG/2025.09/Gianluca%20Dimeo%20%26%20Daniel%20Santoro%20-%20Wings.mp3"></audio>
+        <audio controls
+       src="https://unewfm.vercel.app/api/proxy?url=http%3A%2F%2F185.43.6.38%2Fhc%2Fpreview%2Ftemp_067TG%2F2025.09%2FGianluca%2520Dimeo%2520%2526%2520Daniel%2520Santoro%2520-%2520Wings.mp3">
+        </audio>
+
 
     </div>
 
