--- a/index.html
+++ b/index.html
@@ -212,9 +212,10 @@
             <p>Аудиофайл загружается с: 185.43.6.38</p>
         </div>
         
-        <audio controls
+        <audio id="audio-player" controls
        src="https://unewfm.vercel.app/api/proxy?url=http%3A%2F%2F185.43.6.38%2Fhc%2Fpreview%2Ftemp_067TG%2F2025.09%2FGianluca%2520Dimeo%2520%2526%2520Daniel%2520Santoro%2520-%2520Wings.mp3">
         </audio>
+
 
 
     </div>
