--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ body {
     <button class="playlist-toggle" id="playlist-toggle">▼ Плейлист</button>
     
     <div class="playlist" id="playlist">
-        <div class="playlist-item active" data-src="https://unewfm.vercel.app/api/proxy?url=http%3A%2F%2F185.43.6.38%2Fhc%2Fpreview%2Ftemp_067TG%2F2025.09%2FGianluca%20Dimeo%20%26%20Daniel%20Santoro%20-%20Wings.mp3" data-title="Wings" data-artist="Gianluca Dimeo & Daniel Santoro">
+        <div class="playlist-item active" data-src="https://musify.club/track/pl/21181037/omer-said-left-in-the-rain.mp3" data-title="Wings" data-artist="Gianluca Dimeo & Daniel Santoro">
             Wings - Gianluca Dimeo & Daniel Santoro
         </div>
         <div class="playlist-item" data-src="https://unewfm.vercel.app/api/proxy?url=http%3A%2F%2Fexample.com%2Ftrack2.mp3" data-title="Пример трека 2" data-artist="Исполнитель 2">
