--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             try {
                 // Получаем URL прокси с вашего Vercel deployment
                 // Замените YOUR_VERCEL_URL на ваш актуальный URL
-                const proxyUrl = '/api/audio'; // Локально или на том же домене
+                const proxyUrl = 'https://unewfm.vercel.app/api/audio'; // Локально или на том же домене
                 
                 player.src = proxyUrl;
                 
